Finish data cache class

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 
 cmake-build-debug/Testing/Temporary/LastTest.log
+cmake-build-debug/BusinessStrategy2_0
+*.includecache
+*.internal
+*.make
+*.o
+*.o
+*.o
+*.o
+*.o
+*.log
