compatibility with StableBaselines3 (still not quite finished)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ set(COMMON_SOURCES
         WorkingFiles/python_wrapper.cpp
         WorkingFiles/PythonAPI/PythonAPI.cpp
         WorkingFiles/PythonAPI/PythonAPI.h
-        )
+        WorkingFiles/Agent/BaseAgent.cpp WorkingFiles/Agent/BaseAgent.h WorkingFiles/Agent/StableBaselines3Agent.cpp WorkingFiles/Agent/StableBaselines3Agent.h)
 
 # Executable target
 add_executable(BusinessStrategy2_0 WorkingFiles/main.cpp ${COMMON_SOURCES})
