add various files to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ cmake-build-debug/BusinessStrategy2_0
 cmake-build-debug/BusinessStrategy2_0
 cmake-build-debug/CMakeFiles/BusinessStrategy2_0.dir/CXX.includecache
 *.log
+cmake-build-debug/BusinessStrategy2_0
+*.o
+*.log
+*.csv
