Add vectorized env file

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ cmake-build-debug/BusinessStrategy2_0
 *.so
 cmake-build-debug/BusinessStrategy2_0
 .DS_Store
+cmake-build-debug/CMakeFiles/bss_module_december_twentysixth.dir/link.txt
+cmake-build-debug/CMakeFiles/BusinessStrategy2_0.dir/link.txt
+cmake-build-debug/CMakeFiles/clion-log.txt
