Add cmake-build-debug to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ cmake-build-debug/BusinessStrategy2_0
 cmake-build-debug/CMakeFiles/bss_module_december_twentysixth.dir/link.txt
 cmake-build-debug/CMakeFiles/BusinessStrategy2_0.dir/link.txt
 cmake-build-debug/CMakeFiles/clion-log.txt
+/cmake-build-debug
